# zotero-pdf2md

./: README.md  pyproject.toml
src/zotero_files2md/: cli.py  converter.py  exporter.py  models.py  settings.py  utils.py  zotero.py
src/zotero_pdf2md/: __init__.py  cli.py  converter.py  exporter.py  models.py  settings.py  utils.py  zotero.py
tests/: pdf2md.py  pkg_test.ipynb  test_converter.py  test_converter_ocr_backend.py  test_settings.py  test_zotero.py
