[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-pdf2md"
version = "0.1.0"
description = "Export Zotero-attached PDFs to Markdown using PyMuPDF4LLM."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Cline Assistant" }
]
keywords = ["zotero", "pdf", "markdown", "pymupdf", "cli"]
dependencies = [
  "pymupdf4llm>=0.0.20",
  "pyzotero>=1.5.19",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.urls]
Homepage = "https://github.com/ma-ji/zotero-pdf2md"
Repository = "https://github.com/ma-ji/zotero-pdf2md"

[project.scripts]
zotero-pdf2md = "zotero_pdf2md.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
