[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zotero-files2md"
version = "0.1.1"
description = "Export files on Zotero cloud to local markdown files."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Cline Assistant" }
]
keywords = ["zotero", "pdf", "markdown", "docling", "cli"]
dependencies = [
  "docling>=2.0.0",
  "pyzotero>=1.5.19",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.urls]
Homepage = "https://github.com/ma-ji/zotero-files2md"
Repository = "https://github.com/ma-ji/zotero-files2md"

[project.scripts]
zotero-files2md = "zotero_files2md.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
